[project]
name = "mae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "numpy",
  "pillow",
  "sympy",
  "jinja2",
  "fsspec",
  "networkx",
  "timm>=1.0.16",
  "submitit>=1.5.3",
  "tensorboard>=2.19.0",
]
